# pigeon-app

./: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  pwa-assets.config.ts  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.setup.js
.github/workflows/: release.yml
public/: index.html  manifest.json
src/: app.html  config.ts  global.d.ts  main.js  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  websocket.rs
src/@types/: tauri.d.ts
src/components/chat/: AttachmentItem.svelte  AttachmentList.svelte  Avatar.svelte  ChatAccessPrompt.svelte  ChatElement.svelte  ChatHeader.svelte  ChatInfoModal.svelte  ChatList.svelte  CreateChatForm.svelte  EditChatModal.svelte  ManageMembersModal.svelte  MemberListItem.svelte  Message.svelte  MessageInput.svelte  MessageList.svelte  MessageMenu.svelte  ReactionList.svelte
src/components/chat/modals/: AttachmentModal.svelte  ChatInfoModal.svelte  ConfigModal.svelte  CreateChatForm.svelte  EditChatModal.svelte  ManageMembersModal.svelte  ProfileModal.svelte  SettingsModal.svelte
src/components/ui/: Bar.svelte  Button.svelte  ClickText.svelte  Form.svelte  Input.svelte  Modal.svelte
src/components/ui/auth/: Form.svelte
src/components/ui/tab/: Tab.svelte  Tabs.svelte
src/layouts/: App.svelte  AuthLayout.svelte  LeftLayout.svelte  RightLayout.svelte  SettingsLayout.svelte  Sidebar.svelte
src/lib/: api.ts  config.ts  datetime.ts  gifs.ts  notificationService.ts  presence.ts  pwa.ts  query.ts  session.ts  tauri-env.ts  ws-client.ts  ws-service.ts
src/lib/components/editor/: CodeMirrorEditor.svelte
src/lib/components/icons/: Clock.svelte  PollOptionIcon.svelte
src/lib/components/layout/: AuthLayout.svelte  Bar.svelte  ChatAccessPrompt.svelte  ChatElement.svelte  ChatHeader.svelte  ChatList.svelte  ConnectionBanner.svelte  FullMessageEditor.svelte  GlobalAudioPlayer.svelte  LeftLayout.svelte  Sidebar.svelte  (+3 more)
src/lib/editor/: markdown-extensions.ts  markdown-live-preview.ts  markdown-table.ts  markdown-widgets.ts
src/lib/i18n/: index.ts
src/lib/queries/: avatar.ts  chats.ts  gifs.ts  messages.ts  polls.ts  profile.ts  search.ts
src/lib/stores/: accent.ts  activeChat.ts  audioPlayer.ts  auth.ts  chatNavigation.ts  connection.ts  hotkeys.ts  menu.ts  news.ts  polls.ts  presence.ts  reactions.ts  readReceipts.ts  theme.ts  typing.ts  window.ts
src/lib/types/: components.ts  models.ts  websocket.ts
src/lib/utils/: markdown.ts  media.ts  softNavigation.ts
src/modules/: session.ts
src/modules/ws/: client.ts
src/queries/: avatar.ts  chats.ts  messages.ts  profile.ts  search.ts
src/routes/: +layout.svelte  +page.svelte
src/stores/: auth.js  auth.ts  avatar.js  avatar.test.js  avatar.test.ts  avatar.ts  chatNavigation.ts  chats.ts  presence.ts  profile.ts  reactions.ts  theme.ts  typing.ts
src/styles/: index.scss
src/styles/components/: _button.scss  _checkbox.scss  _modal.scss  _text-select.scss  _variables.scss
src/styles/markdown/: markdown-inline.scss  markdown.scss
src/types/: components.ts  enums.ts  message.ts  models.ts  user.ts  websocket.ts
src/utils/: api.ts
static/: global.css
(+42 files in other folders)
